--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My Fourth Repo</title>
 </head>
 <body>
-    
+    <h4>Sliders of images</h4>
+    <img src="images/dembele.jpg.jpg" alt="">
 </body>
 </html>
