added img and style

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Fourth Repo</title>
+    <link rel="stylesheet" href="styles/slider.css">
 </head>
 <body>
     <h4>Sliders of images</h4>
     <img src="images/dembele.jpg.jpg" alt="">
+    <br>
+    <img src="images/red sky.jpg.jpg" alt="">
 </body>
 </html>
